--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -13,6 +13,9 @@ endif()
 # OpenCV
 find_package(OpenCV 4.1 REQUIRED)
 
+# OpenMP
+find_package(OpenMP REQUIRED)
+
 # Boost
 find_package(Boost 1.60 COMPONENTS filesystem REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
@@ -80,9 +83,11 @@ list(APPEND SERVER_SOURCES
         include/server/ReconstructionServer.hpp
         include/server/server_constants.hpp
         include/server/ServerUserInterface.hpp
+        include/visualisation/Visualiser.hpp
         src/server/ReconstructionServer.cpp
         src/server/MessageConverter.cpp
         src/server/ServerUserInterface.cpp
+        src/visualisation/Visualiser.cpp
 )
 
 list(APPEND CONFIG_SOURCES
@@ -142,7 +147,7 @@ add_executable(cv_server src/main.cpp ${CAMERA_SOURCES}
         ${POINT_CLOUD_SOURCES}
         ${EXTERN_SOURCES}
 )
-target_link_libraries(cv_server ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${G2O_LIBS} reconstruction::networking)
+target_link_libraries(cv_server ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${G2O_LIBS} OpenMP::OpenMP_CXX reconstruction::networking)
 
 # Reconstruct module test program
 add_executable(reconstruct_test src/test/reconstruct_test_kitti_rectified.cpp src/test/tests_common.cpp
