Refectored CMakeLists and added new optical flow estimation function and test program

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Project
 cmake_minimum_required(VERSION 3.10)
 project(cv_reconstruct)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 # Mac OSX Check
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -157,53 +157,9 @@ add_executable(reconstruct_test src/test/reconstruct_test_kitti_rectified.cpp sr
 )
 target_link_libraries(reconstruct_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${G2O_LIBS})
 
-# Localization module test program
-add_executable(localization_test src/test/localization_test_kitti.cpp src/test/tests_common.cpp
-        ${CAMERA_SOURCES}
-        ${RECONSTRUCT_3D_SOURCES}
-        ${CONFIG_SOURCES}
-        ${PIPELINE_SOURCES}
-        ${POINT_CLOUD_SOURCES}
-        ${EXTERN_SOURCES}
-)
-target_link_libraries(localization_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
-
-# Pipeline module test program
-add_executable(pipeline_test src/test/pipeline_test.cpp src/test/tests_common.cpp
-        ${CAMERA_SOURCES}
-        ${RECONSTRUCT_3D_SOURCES}
-        ${CONFIG_SOURCES}
-        ${PIPELINE_SOURCES}
-        ${POINT_CLOUD_SOURCES}
-        ${EXTERN_SOURCES}
-)
-target_link_libraries(pipeline_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${G2O_LIBS})
-
-# Feature extraction module test program
-add_executable(feature_extract_test src/test/feature_extraction_test.cpp src/test/tests_common.cpp
-        ${CAMERA_SOURCES}
-        ${RECONSTRUCT_3D_SOURCES}
-        ${CONFIG_SOURCES}
-        ${PIPELINE_SOURCES}
-        ${POINT_CLOUD_SOURCES}
-        ${EXTERN_SOURCES}
-)
-target_link_libraries(feature_extract_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
-
-# Feature extraction module test program
-add_executable(image_feature_test src/test/image_feature_test.cpp
-        ${CAMERA_SOURCES}
-        ${RECONSTRUCT_3D_SOURCES}
-        ${CONFIG_SOURCES}
-        ${PIPELINE_SOURCES}
-        ${POINT_CLOUD_SOURCES}
-        ${EXTERN_SOURCES}
-)
-target_link_libraries(image_feature_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
-
-# Alignment test
-add_executable(alignment_test src/test/alignment_test.cpp)
-target_link_libraries(alignment_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
+# Feature Matching test program
+add_executable(feature_match_test src/test/feature_match_test.cpp src/pipeline/OpticalFlowEstimator.cpp include/pipeline/OpticalFlowEstimator.hpp)
+target_link_libraries(feature_match_test ${OpenCV_LIBS})
 
 # Catch2 Tests
 add_executable(test_camera_calib_parser test/test_camera_calib_parser.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${EXTERN_SOURCES} ${TESTING_SOURCES})
