--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ set(CMAKE_CXX_STANDARD 14)
 add_subdirectory(kitti_vision_streamer)
 add_subdirectory(network_protocol)
 add_subdirectory(cv_reconstruct)
+add_subdirectory(stereopi_video_streamer)
